
Table Player {
  player_id serial [pk, increment]
  nickname varchar(50) [unique, not null]
  age int [note: 'CHECK (age > 0)']
  gender varchar(15)
  experience_level varchar(30)
}

Table Episode {
  episode_id serial [pk, increment]
  episode_number int [unique, not null]
  title varchar(50)
}

Table Game {
  game_id serial [pk, increment]
  episode_id int [not null]
  map_number int [not null]
  started_at timestamp
  ended_at timestamp
}

Table GameParticipant {
  game_id int [not null]
  player_id int [not null]

  Indexes {
    (game_id, player_id) [pk]
  }
}

Table Sector {
  sector_id serial [pk, increment]
  episode_id int [not null]
  map_number int [not null]
  sector_x int [not null]
  sector_y int [not null]

  Indexes {
    (episode_id, map_number, sector_x, sector_y) [unique]
  }
}

Table TelemetryEvent {
  event_id serial [pk, increment]
  event_timestamp timestamp [not null]
  tic int [not null, note: 'CHECK (tic >= 0)']
  pos_x int [not null]
  pos_y int [not null]
  pos_z int [not null]
  angle float [note: 'CHECK (angle >= 0 AND angle <= 360)']
  momx float
  momy float
  shield int [note: 'CHECK (shield >= 0)'] // O "armor" según prefieran
  health int [note: 'CHECK (health >= 0)']
  ammo int [note: 'CHECK (ammo >= 0)']
  sector_id int [not null]
  player_id int [not null]
  game_id int [not null]
}

Table UXInstrument {
  instrument_id serial [pk, increment]
  instrument_name varchar(30) [not null]
}

Table UXResponse {
  response_id serial [pk, increment]
  player_id int [not null]
  instrument_id int [not null]
  game_id int
  score float
  responded_at timestamp [default: `CURRENT_TIMESTAMP`]
}


Ref: Game.episode_id > Episode.episode_id
Ref: GameParticipant.game_id > Game.game_id [delete: cascade]
Ref: GameParticipant.player_id > Player.player_id [delete: cascade]

Ref: Sector.episode_id > Episode.episode_id

Ref: TelemetryEvent.sector_id > Sector.sector_id
Ref: TelemetryEvent.player_id > Player.player_id
Ref: TelemetryEvent.game_id > Game.game_id

Ref: UXResponse.player_id > Player.player_id
Ref: UXResponse.instrument_id > UXInstrument.instrument_id
Ref: UXResponse.game_id > Game.game_id